tests/should_fail/wrong_arguments.c
// DEFS A

#ifdef A
int func(int a, int b);
#endif

int main(void) {
	func(10);
}
